--- a/index.html
+++ b/index.html
@@ -94,16 +94,21 @@
       <h2 class='h2-underline'>CLV INTRODUCE</h2>
       <div class='token-content'>
         <div class='c-1'>
-          <p class='m-2'>Earn rewards from platform usage</p>
-          <p class='m-3'>Participate in governance activities for a pre-determined set of parameters</p>
+          <p class='m-2 item' data-intro='item-1'>Earn rewards from platform usage</p>
+          <p class='m-3 item' data-intro='item-3'>Participate in governance activities for a pre-determined set of parameters</p>
         </div>
         <div class='c-2 m-1'>
-          <img src='image/index/introduce.png' />
+          <div class='item-1'></div>
+          <div class='item-2'></div>
+          <div class='item-3'></div>
+          <div class='item-4'></div>
+          <div class='item-5'></div>
+          <div class='item-6'></div>
         </div>
         <div class='c-3'>
-          <p class='m-4'>Incentivize community and ecosystem contributors</p>
-          <p class='m-5'>Stake to run nodes</p>
-          <p class='m-6'>Transact on exchanges and marketplaces</p>
+          <p class='m-4 item' data-intro='item-4'>Incentivize community and ecosystem contributors</p>
+          <p class='m-5 item' data-intro='item-5'>Stake to run nodes</p>
+          <p class='m-6 item' data-intro='item-6'>Transact on exchanges and marketplaces</p>
         </div>
       </div>
     </div>
