--- a/index.html
+++ b/index.html
@@ -98,6 +98,7 @@
           <p class='m-3 item' data-intro='item-3'>Participate in governance activities for a pre-determined set of parameters</p>
         </div>
         <div class='c-2 m-1'>
+          <img src='image/index/introduce.png' />
           <div class='item-1'></div>
           <div class='item-2'></div>
           <div class='item-3'></div>
