--- a/features.html
+++ b/features.html
@@ -7,7 +7,7 @@
   <meta name="theme-color" content="#ffffff">
   <meta charset="utf-8" />
   <title>Clover - Welcome</title>
-  <link rel='icon' href="image/logo.svg" />
+  <link rel='icon' href="image/clover/logo.svg" />
 	<link rel="stylesheet" href="style/reset.css" />
 	<link rel="stylesheet" href="style/style.css" />
   <script src='script/jquery.js'></script>
@@ -15,7 +15,7 @@
 <body>
   <div class='container'>
     <div class='head'>
-      <img src='image/logo-text.svg' alt='clover' />
+      <img src='image/clover/logo-text.svg' alt='clover' />
       <ul class='nav'>
         <li><a href='index.html'>Home</a></li>
         <li class='current'><a href='features.html'>Features</a></li>
