--- a/features.html
+++ b/features.html
@@ -12,14 +12,14 @@
 	<link rel="stylesheet" href="style/style.css" />
   <script src='script/jquery.js'></script>
 </head>
-<body>
+<body class='features'>
   <div class='container'>
     <div class='head'>
       <img src='image/clover/logo-text.svg' alt='clover' />
       <ul class='nav'>
         <li><a href='index.html'>Home</a></li>
         <li class='current'><a href='features.html'>Features</a></li>
-        <li><a href='#'>Team</a></li>
+        <li><a href='team.html'>Team</a></li>
         <li><a href='https://medium.com/projectclover' target='_blank'>Medium</a></li>
       </ul>
     </div>
@@ -137,7 +137,13 @@
     </div>
   </div>
   <div class='footer'>
-    &copy;2020 CloverFinance. All Rights Reserved
+    <div class='copy'>&copy;2020 CloverFinance. All Rights Reserved</div>
+    <ul class='social'>
+      <li><a href='https://twitter.com/clover_finance'><img src='image/logo/twitter.svg' alt='twitter' /></a></li>
+      <li><a href='https://t.me/clover_en'><img src='image/logo/telegram.svg' alt='telegram' /></a></li>
+      <li><a href='https://open.kakao.com/o/ggPlcrzc'><img src='image/logo/kakao.svg' alt='kakao' /></a></li>
+      <li><a href='https://medium.com/cloverdefi'><img src='image/logo/medium.svg' alt='medium' /></a></li>
+    </ul>
   </div>
 </body>
 </html>
