--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <ul class='nav'>
         <li class='current'><a href='index.html'>Home</a></li>
         <li><a href='features.html'>Features</a></li>
-        <li><a href='#'>Team</a></li>
+        <li><a href='team.html'>Team</a></li>
         <li><a href='https://medium.com/projectclover' target='_blank'>Medium</a></li>
       </ul>
     </div>
@@ -166,7 +166,13 @@
     </div>
   </div>
   <div class='footer'>
-    &copy;2020 CloverFinance. All Rights Reserved
+    <div class='copy'>&copy;2020 CloverFinance. All Rights Reserved</div>
+    <ul class='social'>
+      <li><a href='https://twitter.com/clover_finance'><img src='image/logo/twitter.svg' alt='twitter' /></a></li>
+      <li><a href='https://t.me/clover_en'><img src='image/logo/telegram.svg' alt='telegram' /></a></li>
+      <li><a href='https://open.kakao.com/o/ggPlcrzc'><img src='image/logo/kakao.svg' alt='kakao' /></a></li>
+      <li><a href='https://medium.com/cloverdefi'><img src='image/logo/medium.svg' alt='medium' /></a></li>
+    </ul>
   </div>
   <script src='script/slider.js'></script>
 </body>
