--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <title>Clover - Welcome</title>
   <link rel='icon' href="image/clover/logo.svg" />
 	<link rel="stylesheet" href="style/reset.css" />
-	<link rel="stylesheet" href="style/style.css" />
+	<link rel="stylesheet" href="style/styles.css" />
   <script src='script/jquery.js'></script>
 </head>
 <body class='home'>
