--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body class='home'>
   <div class='container'>
     <div class='head'>
-      <img src='image/clover/logo-text.svg' alt='clover' />
+      <a href='index.html'><img src='image/clover/logo-text.svg' alt='clover' /></a>
       <ul class='nav'>
         <li class='current'><a href='index.html'>Home</a></li>
         <li><a href='features.html'>Features</a></li>
