Update Team member info

--- a/team.html
+++ b/team.html
@@ -49,9 +49,9 @@
             <dt>
               <img src='image/team/Norelle-NG.svg' alt='Norelle NG' />
               <em>Norelle NG</em>
-              <a href='' target='_blank'>linkedin</a>
+              <a href='https://www.linkedin.com/in/norelleng/' target='_blank'>linkedin</a>
             </dt>
-            <dd>Norelle will be leading the operation of Clover. Norelle was admitted into Rotman Commerce and graduated from the University of Toronto’s Computational Cognition and Computer Science program. Prior to getting into the Blockchain industry, she was working as a Data Scientist at a listed big data company and Chief Advisor at a listed 4A company. Her crypto career started as the Head of Client Relations at Amber Group, a crypto quantitative trading firm. She then crossed paths with Bithumb holdings, spent her time working as an advisor and became a partner at Bithumb Global.</dd>
+            <dd>Norelle will be leading the operation of Clover. Norelle is a graduate of the University of Toronto’s Computational Cognition&Computer Science program. Before getting into the Blockchain industry, she was working as a Data Scientist at a listed big data company and Chief Advisor at a listed 4A company. Her crypto career started as the Head of Client Relations at Amber Group. She then crossed paths with Bithumb Holdings, spent her time working as an advisor there and became a Managing Partner at Bithumb Global. </dd>
           </dl>
           <dl>
             <dt>
@@ -67,7 +67,7 @@
               <em>Barek Sekandari</em>
               <a href='https://www.linkedin.com/in/barek-sekandari-597752153/' target='_blank'>linkedin</a>
             </dt>
-            <dd>Barek will be leading the marketing operation of Clover. He is a keen entrepreneur and salesperson, Barek launched his entrepreneurial journey at age 17 in the Event Management space before transitioning to Real Estate, where he ran a successful property development business. Following his introduction to Bitcoin in 2015, Bariq became fascinated with its underlying blockchain technology. After tracking bitcoin and networking in the cryptocurrency and blockchain space, Bariq was well positioned to assist blockchain projects in connecting with south asian governments, top tier exchange listings and marketing. During this period, he also became an active contributor and token holder to numerous crypto projects. Bariq is particularly passionate about the implementation of blockchain technology. In 2018, Bariq has been working closely with South Asian governments and international organisations such as the World Bank, Asian Development Bank and World Health Organisation etc to facilitate the introduction of blockchain technology to their infrastructure.</dd>
+            <dd>Barek will be leading the business development of Clover. He is a serial entrepreneur as well as an outstanding marketer who has been working in multiple reputable marketing agencies. Barek was the founding member and Head of Business Development of Fantom. He has also been working closely with South Asian governments and international organizations such as World Bank, Asian Development Bank and World Health Organisation etc to facilitate the introduction of blockchain technology to their infrastructure.</dd>
           </dl>
           <dl>
             <dt>
