--- a/team.html
+++ b/team.html
@@ -31,7 +31,7 @@
         <div class='leadership'>
           <dl>
             <dt>
-              <img src='image/team/Burak-Keçeli.svg' alt='Burak Keçeli' />
+              <img src='image/team/Burak-Keçeli.png' alt='Burak Keçeli' />
               <em>Burak-Keçeli</em>
               <a href='https://www.linkedin.com/in/burak-ke%C3%A7eli/' target='_blank'>linkedin</a>
             </dt>
