--- a/features.html
+++ b/features.html
@@ -13,6 +13,7 @@
   <script src='script/jquery.js'></script>
 </head>
 <body class='features'>
+  <img class='cursorNormal' src='image/cursor/normal.svg' />
   <div class='container'>
     <div class='head'>
       <a href='index.html'><img src='image/clover/logo-text.svg' alt='clover' /></a>
@@ -24,6 +25,7 @@
       </ul>
     </div>
     <div class='content'>
+      <img class='cursor' src='image/background/background.svg' width='760px' height='760px' />
       <div class='section clover-os'>
         <em class='h1'>Four main agreements of Clover OS</em>
         <div class='co-content'>
@@ -137,13 +139,9 @@
     </div>
   </div>
   <div class='footer'>
-    <div class='copy'>&copy;2020 CloverFinance. All Rights Reserved</div>
-    <ul class='social'>
-      <li><a href='https://twitter.com/clover_finance'><img src='image/logo/twitter.svg' alt='twitter' /></a></li>
-      <li><a href='https://t.me/clover_en'><img src='image/logo/telegram.svg' alt='telegram' /></a></li>
-      <li><a href='https://open.kakao.com/o/ggPlcrzc'><img src='image/logo/kakao.svg' alt='kakao' /></a></li>
-      <li><a href='https://medium.com/cloverdefi'><img src='image/logo/medium.svg' alt='medium' /></a></li>
-    </ul>
+    <div class='copy'></div>
+    <ul class='social'></ul>
   </div>
+  <script src='script/effect.js'></script>
 </body>
 </html>
