--- a/team.html
+++ b/team.html
@@ -12,7 +12,8 @@
 	<link rel="stylesheet" href="style/styles.css" />
   <script src='script/jquery.js'></script>
 </head>
-<body class='team'>
+<body>
+  <img class='cursorNormal' src='image/cursor/normal.svg' />
   <div class='container'>
     <div class='head'>
       <a href='index.html'><img src='image/clover/logo-text.svg' alt='clover' /></a>
@@ -24,9 +25,12 @@
       </ul>
     </div>
     <div class='content'>
+      <img class='cursor' src='image/background/background.svg' />
       <div class='section team-intro'>
-        <em class='h1'>A globally distributed teampushing innovation worldwide.</em>
-        <h1>Our team is made up of people passionate about disruptive innovations, located in 10+ countries. We believe that diversity and inclusion drive innovation and adoption across the globe.</h1>
+        <div class='team-intro-description'>
+          <em class='h1'>A globally distributed teampushing innovation worldwide.</em>
+          <h1>Our team is made up of people passionate about disruptive innovations, located in 10+ countries. We believe that diversity and inclusion drive innovation and adoption across the globe.</h1>
+        </div>
         <h3>Leadership Team</h3>
         <div class='leadership'>
           <dl>
@@ -114,13 +118,9 @@
     </div>
   </div>
   <div class='footer'>
-    <div class='copy'>&copy;2020 CloverFinance. All Rights Reserved</div>
-    <ul class='social'>
-      <li><a href='https://twitter.com/clover_finance'><img src='image/logo/twitter.svg' alt='twitter' /></a></li>
-      <li><a href='https://t.me/clover_en'><img src='image/logo/telegram.svg' alt='telegram' /></a></li>
-      <li><a href='https://open.kakao.com/o/ggPlcrzc'><img src='image/logo/kakao.svg' alt='kakao' /></a></li>
-      <li><a href='https://medium.com/cloverdefi'><img src='image/logo/medium.svg' alt='medium' /></a></li>
-    </ul>
+    <div class='copy'></div>
+    <ul class='social'></ul>
   </div>
+  <script src='script/effect.js'></script>
 </body>
 </html>
