--- a/features.html
+++ b/features.html
@@ -127,7 +127,7 @@
             <dd>responsible for one-stop development and cross-chain deployment of Smart Contract.</dd>
           </dl>
           <dl class='ko-item'>
-            <dt><em>Skura</em><span>H5 to Native Adapter</span></dt>
+            <dt><em>Sakura</em><span>H5 to Native Adapter</span></dt>
             <dd>responsible for the adaptation of front-end H5 and native language.</dd>
           </dl>
           <dl class='ko-item'>
