--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       <div class='section section-vision'>
         <em class='h1 m-1'>Our Vision</em>
         <ul>
-          <li class='m-2'>Bring Most Benefi to Developers</li>
+          <li class='m-2'>Bring Most Benefit to Developers</li>
           <li class='m-3'>From dApp to eApp (Eternal App)</li>
           <li class='m-4'>Connecting Blockchain to Everything</li>
         </ul>
