--- a/features.html
+++ b/features.html
@@ -120,19 +120,19 @@
         <div class='ko-container'>
           <dl class='ko-item'>
             <dt><em>Rose</em><span>Universal Crypto Signer</span></dt>
-            <dd>responsible for supporting cross-chain signatures.</dd>
+            <dd>Responsible for supporting cross-chain signatures.</dd>
           </dl>
           <dl class='ko-item'>
             <dt><em>Tulip</em><span>Higher Level Smart Contract Language</span></dt>
-            <dd>responsible for one-stop development and cross-chain deployment of Smart Contract.</dd>
+            <dd>Responsible for one-stop development and cross-chain deployment of Smart Contract.</dd>
           </dl>
           <dl class='ko-item'>
             <dt><em>Sakura</em><span>H5 to Native Adapter</span></dt>
-            <dd>responsible for the adaptation of front-end H5 and native language.</dd>
+            <dd>Responsible for the adaptation of front-end H5 and native language.</dd>
           </dl>
           <dl class='ko-item'>
             <dt><em>Orchid</em><span>Deep Learning Indexing System</span></dt>
-            <dd>responsible for indexing, querying and recommending dApps through deep learning.</dd>
+            <dd>Responsible for indexing, querying and recommending dApps through deep learning.</dd>
           </dl>
         </div>
       </div>
